# open-sfdi

./: .gitignore  README.md  args.py  blender.py  camera.npy  camera.py  definitions.py  env.yml  experiment.py  export_wheels.sh  gamma_calibration.ipynb  maths.py  projector.npy  pyproject.toml  pyproject.toml.backup  requirements.txt  sfdi-benchtop.py  test.py  utils.py
benchtop/: __main__.py  video.py
calibration/: gamma_calibration.py
generation/: fringes.py
sfdi/: definitions.py  experiment.py  video.py
sfdi/calibration/: gamma_calibration.py  profilometry.py
sfdi/fringe_app/: controllers.py  models.py  views.py
sfdi/sfdi/: __init__.py
sfdi/sfdi/io/: std.py
sfdi/test/: test_fringes_generation.py  test_gamma_calibration.py
sfdi/utils/: maths.py
src/: test.py
src/fringe_app/: __main__.py  controllers.py  models.py  views.py
src/open-sfdi/: calibration.py  fringes.py  profilometry.py
src/open-sfdi/io/: repositories.py
src/opensfdi/: __init__.py  calibration.py  calibration2.py  characterisation.py  cloud.py  colour.py  definitions.py  devices.py  experiment.py  fringe_projection.py  fringes.py  image.py  phase.py  phase_shifting.py  phase_unwrapping.py  pointcloud.py  profiling.py  profilometry.py  reconstruction.py  services.py  utils.py  video.py
src/opensfdi/devices/: __init__.py  board.py  camera.py  characterisation.py  projector.py  vision.py
src/opensfdi/io/: __init__.py  repositories.py  services.py
src/opensfdi/light/: monte_carlo.py
src/opensfdi/phase/: __init__.py  shift.py  unwrap.py
src/sfdi/: __init__.py  calibration.py  definitions.py  experiment.py  fringes.py  profilometry.py  services.py  video.py
src/test/: __init__.py  stub.py  test_blender.py  test_calibration.py  test_camera.py  test_detection.py  test_digitaltwin.py  test_experiment.py  test_experiment.pytemp  test_fringes_generation.py  test_fringes_generation.pytemp  test_gamma_calibration.py  test_gamma_calibration.pytemp  test_mcmf.py  test_misc.py  test_phase.py  test_phasecount.py  test_projector.py  test_quicktest.py  test_realdata.py  test_resolution.py  test_spacing.py  test_working.py  utils.py  video.py
test/: __init__.py  test_experiment.py  test_fringes_generation.py  test_gamma_calibration.py
(+25 files in other folders)
