[tool.poetry]
name = "opensfdi"
version = "0.1.14"
description = ""
requires-python = "3.13.1"
authors = ["Daniel Weston <psydw2@nottingham.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
opencv-python = "^4.13.0.92"
matplotlib = "^3.10.8"
scipy = "^1.17.1"
pillow = "^12.2.0"
vedo = "^2026.6.1"
scikit-image = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
memory-profiler = "^0.61.0"

[tool.poetry.group.extras.dependencies]
cupy-cuda12x = {extras = ["ctk"], version = "^14.0.1"}
picamera2 = {version = "^0.3.34", markers = "platform_machine == 'aarch64'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"